--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,17 @@
     ],
     "require": {
       "blitsoftwares/set-location": "dev-master"
+    },
+    "autoload": {
+      "psr-4": {
+        "Modules\\Pages\\": "./"
+      }
+    },
+    "extra": {
+      "laravel":{
+        "providers": [
+          "Modules\\Pages\\Providers\\PageServiceProvider"
+        ]
+      }
     }
 }
